@@ -20357,6 +20357,106 @@ and the target being the sword.</p>
 
 
                   </tr>
+                  <tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>$h</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>The pronoun him/her of the monster.</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  </tr>
+                  <tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>$H</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>The pronoun him/her of a random pc inhabitant.</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  </tr>
 
 
 
@@ -20605,6 +20705,106 @@ and the target being the sword.</p>
 
 
                     <td>The pronoun his/her of the target of the trigger.</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  </tr>
+                  <tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>$s</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>The pronoun him/her of the source of the trigger.</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                  </tr>
+                  <tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>$S</td>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                    <td>The pronoun him/her of the target of the trigger.</td>
 
 
 
